--- a/views/product_detail.ejs
+++ b/views/product_detail.ejs
@@ -17,7 +17,7 @@ Tên: <%= media.media_name %>
 <br>
 URL: <%= media.media_url %>
 <br>
-<a href="edit_media?media=<%=media._id%>">Edit</a>
+<a href="edit_media?id=<%=media._id%>">Edit</a>
 <br>
 <% }) %>
 </body>
