--- a/views/edit_product.ejs
+++ b/views/edit_product.ejs
@@ -1,35 +1,100 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+<html lang="en">
+<head>
+    <% include ./partial/head %>
 </head>
 <body>
-<form method="post" enctype="multipart/form-data">
-    <% product_array.forEach(function (product) { %>
-    Name: <input name="txtProductName" placeholder="Product Name" value="<%=product.product_name%>">
-    <br>
-    Price: <input name="txtPrice" placeholder="Price" value="<%=product.price%>">
-    <br>
-    Tags: <input name="txtTags" placeholder="Tags" value="<%=product.tags%>">
-    <br>
-    Description: <input name="txtDescription" placeholder="Description" value="<%=product.description%>">
-    <br>
-    Media:
-    <% product.media.forEach(function(media){ %>
-    <br>
-    Media Name: <input name="txtMediaName" placeholder="Media Name" value="<%=media.media_name%>">
-    <br>
-    Url: <%=media.media_url%>
-    <input name="txtMediaUrl" placeholder="Media Url"> hoặc
-    <input type="file" name="ulfMediaUrl" accept="image/*" alt="Product Image">
-    <br>
-    Loại:
-    <input type="radio" name="grpType" value="Image" checked> Image
-    <input type="radio" name="grpType" value="Video"> Video<br>
-    <br>
-    <% })}) %>
-    <input type="submit" value="Insert">
-</form>
+<header>
+    <% include ./partial/header %>
+</header>
+<div class="container">
+    <div class="row">
+        <center>
+            <div class="col-md-12">
+                <div class="row authors-list">
+                    <form action="" method="post" enctype="multipart/form-data">
+
+                        <% product_array.forEach(function (product) { %>
+                        <div class="col-md-12 input_insertstore">
+                            <input type="text" id="a" name="txtProductName" placeholder="Tên sản phẩm"
+                                   class="form-control" value="<%=product.product_name%>">
+                        </div>
+                        <div class="col-md-12 input_insertstore">
+                            <input type="text" id="o" name="txtPrice" placeholder="Giá"
+                                   class="form-control" value="<%=product.price%>">
+                        </div>
+
+                        <div class="col-md-12">
+                            <input type="text" required name="txtTags" placeholder="Tags"
+                                   class="form-control  input_insertstore" value="<%=product.tags%>">
+                        </div>
+
+
+
+                        <div class="col-md-6 input_insertstore">
+                            <!--Phần này cho description-->
+                            <label class="col-md-1 control-label ">
+                                Description
+                            </label>
+                            <div class="col-md-12 input_insertstore">
+                                <textarea name="txtDescription" rows="6" class="form-control" value="<%=product.description%>"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 input_insertstore">
+                            <label class="col-md-1 control-label  ">
+                                Media
+                            </label>
+                            <% product.media.forEach(function(media){ %>
+                            <div class="col-md-12 input_insertstore">
+                                <input type="text" placeholder="Media name" name="txtMediaName"
+                                       class="form-control" value="<%=media.media_name%>">
+                            </div>
+                            <label class="col-md-6 control-label" style="margin-top: 40px;">
+                                Chọn thuộc tính bạn muốn
+                            </label>
+
+                            <div class="col-md-2 input_insertstore">
+
+                                <input type="radio" name="grpType" value="Image" checked
+                                       class="form-control input_insertstore"> Image
+                            </div>
+                            <div class="col-md-2 input_insertstore">
+
+                                <input type="radio" name="grpType" value="Video"
+                                       class="form-control  "> Video
+                            </div>
+                            <div class="col-md-12">
+
+                            </div>
+                            <div class="col-md-5 input_insertstore">
+                                <input type="text"  name="txtMediaUrl" placeholder="Media url"
+                                       class="form-control input_insertstore" value="<%=media.media_url%>">
+                            </div>
+                            <label class="col-md-2 control-label input_insertstore">
+                                Or
+                            </label>
+
+                            <div class="col-md-5 input_insertstore">
+                                <input type="file"  name="ulfMediaUrl" placeholder=""
+                                       accept="image/*" alt="Product Image"
+                                       class="form-control  input_insertstore">
+                            </div>
+                        </div>
+
+
+                        <div class="col-md-12">
+                            <input type="submit" value="Thêm" class="btn btn-primary btn-block input_insertstore">
+                        </div>
+                        <% })}) %>
+                    </form>
+                </div>
+            </div>
+        </center>
+    </div>
+</div>
+<footer>
+    <% include ./partial/footer %>
+</footer>
 </body>
 </html>
