--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -14,7 +14,7 @@
             </a>
             <a class="navbar-brand" href="/">
                 <i class="i-softer">
-                    Softer Source
+                    SOFTER SOURCE
                 </i>
             </a>
         </div>
@@ -64,12 +64,12 @@
             <!--</div>-->
             <!--</form>-->
             <ul class="nav navbar-nav navbar-right">
-                <li class="i-menu"><a href="test">Test</a></li>
-                <li class="i-menu"><a href="industry">Industry</a></li>
-                <li class="i-menu"><a href="insert_industry">Insert Industry</a></li>
-                <li class="i-menu"><a href="insert_store">Insert Store</a></li>
-                <li class="i-menu"><a href="/">Home</a></li>
-                <li class="i-menu"><a href="search"> Search</a></li>
+                <!--<li class="i-menu"><a href="test">Test</a></li>-->
+                <li class="i-menu"><a href="industry">INDUSTRY</a></li>
+                <!--<li class="i-menu"><a href="insert_industry">Insert Industry</a></li>-->
+                <li class="i-menu"><a href="insert_store">ADD STORE</a></li>
+                <li class="i-menu"><a href="/">HOME</a></li>
+                <li class="i-menu"><a href="search">SEARCH</a></li>
             </ul>
         </div>
     </div>
