--- a/views/edit_store.ejs
+++ b/views/edit_store.ejs
@@ -299,8 +299,18 @@ google.maps.event.addDomListener(window, 'load', initialize);
                                class="form-control input_insertstore" value="<%= address.city %>">
                     </div>
                     <div class="col-md-4">
-                        <input type="text" required name="txtDistrict" placeholder="Quận/Huyện"
-                               class="form-control  input_insertstore" value="<%= address.district %>">
+                        <select name="optDistrict" class="form-control">
+                            <% location_array.forEach(function(location){ %>
+                            <optgroup label="<%= location.city %>">
+                                <% location.district.forEach(function(district){ %>
+                                <% if(address.district == district){%>
+                                <option value="<%=district%>" selected><%=district%></option>
+                                <%}else{%>
+                                <option value="<%=district%>"><%=district%></option>
+                                <% }}) %>
+                            </optgroup>
+                            <% }) %>
+                        </select>
                     </div>
                     <div class="col-md-4">
                         <input type="text" required name="txtStreet" placeholder="Số/Đường"
