Sửa lỗi khi insert, edit không hiện room (số phòng).

--- a/views/insert_store.ejs
+++ b/views/insert_store.ejs
@@ -87,7 +87,7 @@
                                class="form-control input_insertstore">
                     </div>
                     <div class="col-md-4">
-                        <input type="text" required name="txtRoom" placeholder="Số/Phòng"
+                        <input type="text"  name="txtRoom" placeholder="Số/Phòng (dành cho căn hộ, văn phòng, nhà trọ)"
                                class="form-control input_insertstore">
                     </div>
                     <div class="col-md-12">
