--- a/views/edit_store.ejs
+++ b/views/edit_store.ejs
@@ -317,7 +317,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
                                class="form-control input_insertstore" value="<%= address.street %>">
                     </div>
                     <div class="col-md-4">
-                        <input type="text" required name="txtRoom" placeholder="Phòng"
+                        <input type="text" name="txtRoom" placeholder="Phòng"
                                class="form-control input_insertstore" value="<%= address.room %>">
                     </div>
                     <% }) %>
