--- a/views/store_detail.ejs
+++ b/views/store_detail.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <% include ./partial/head %>
-    <script src="./js/map.js"></script>
+    <!--<script src="./js/map.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
     <script>
