--- a/views/product_detail.ejs
+++ b/views/product_detail.ejs
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+<html lang="en">
+<head>
+    <title>Home</title>
+    <% include ./partial/head %>
 </head>
 <body>
-<a href="insert_media">Thêm Media</a>
-<br>
-<% product_array.forEach(function(product){ %>
-<%= product.product_name %>
-<%= product.price %>
-<% }) %>
-<br><br>Media nè:<br>
-<% media_array.forEach(function(media){ %>
-Tên: <%= media.media_name %>
-<br>
-URL: <%= media.media_url %>
-<br>
-<a href="edit_media?id=<%=media._id%>">Edit</a>
-<br>
-<% }) %>
+<header>
+    <% include ./partial/header %>
+</header>
+<div class="container">
+    <a href="insert_media">Thêm Media</a>
+    <br>
+    <% product_array.forEach(function(product){ %>
+    <%= product.product_name %>
+    <%= product.price %>
+    <% }) %>
+    <br><br>Media nè:<br>
+    <% media_array.forEach(function(media){ %>
+    Tên: <%= media.media_name %>
+    <br>
+    URL: <%= media.media_url %>
+    <br>
+    <a href="edit_media?id=<%= media._id %>">Edit</a>
+    <br>
+    <% }) %>
+</div>
+<footer>
+    <% include ./partial/footer %>
+</footer>
 </body>
 </html>
