--- a/views/edit_product.ejs
+++ b/views/edit_product.ejs
@@ -37,7 +37,7 @@
                                 Description
                             </label>
                             <div class="col-md-12 input_insertstore">
-                                <textarea name="txtDescription" rows="6" class="form-control" value="<%=product.description%>"></textarea>
+                                <textarea name="txtDescription" rows="6" class="form-control"><%=product.description%></textarea>
                             </div>
                         </div>
 
