Chỉnh sửa chức năng search, chưa có javascript bắt lỗi.

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -125,7 +125,7 @@
                     <tr>
                         <td colspan="3">
                             <center>
-                                <img src="<%= p.media[0].media_url %>" class="img-up">
+                                <img src="<%= p.product_image %>" class="img-up">
                             </center>
                         </td>
                     </tr>
