Thêm các phần liên quan đến location.

--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -64,9 +64,8 @@
             <!--</div>-->
             <!--</form>-->
             <ul class="nav navbar-nav navbar-right">
-                <!--<li class="i-menu"><a href="test">Test</a></li>-->
+                <li class="i-menu"><a href="location">LOCATION</a></li>
                 <li class="i-menu"><a href="industry">INDUSTRY</a></li>
-                <!--<li class="i-menu"><a href="insert_industry">Insert Industry</a></li>-->
                 <li class="i-menu"><a href="insert_store">ADD STORE</a></li>
                 <li class="i-menu"><a href="/">HOME</a></li>
                 <li class="i-menu"><a href="search">SEARCH</a></li>
