--- a/views/store_detail.ejs
+++ b/views/store_detail.ejs
@@ -310,7 +310,7 @@
 
                 <p><%= store.hours_of_work %></p>
 
-                <p class="label-store">Indystry </p>
+                <p class="label-store">Industry </p>
 
                 <p><a href="industry?type=<%= store.industry %>"><%= store.industry %></a></p>
             </center>
