--- a/views/product_detail.ejs
+++ b/views/product_detail.ejs
@@ -3,6 +3,12 @@
 <head>
     <title>Home</title>
     <% include ./partial/head %>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <script src="./js/bootstrap-image-gallery.min.js"></script>
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+    <link rel="stylesheet" href="./css/bootstrap-image-gallery.min.css">
 </head>
 <body>
 <header>
@@ -24,6 +30,53 @@
     <a href="edit_media?id=<%= media._id %>">Edit</a>
     <br>
     <% }) %>
+    <!--show img-->
+    <div id="blueimp-gallery" class="blueimp-gallery">
+        <!-- The container for the modal slides -->
+        <div class="slides"></div>
+        <!-- Controls for the borderless lightbox -->
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="close">×</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+        <!-- The modal dialog, which will be used to wrap the lightbox content -->
+        <div class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title"></h4>
+                    </div>
+                    <div class="modal-body next"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default pull-left prev">
+                            <i class="glyphicon glyphicon-chevron-left"></i>
+                            Previous
+                        </button>
+                        <button type="button" class="btn btn-primary next">
+                            Next
+                            <i class="glyphicon glyphicon-chevron-right"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="links">
+        <a href="images/a.jpg" title="Banana" data-gallery>
+            <img style="width: 80px;height: 80px;" src="./images/a.jpg" alt="Banana">
+        </a>
+        <a href="images/a.jpg" title="Apple" data-gallery>
+            <img style="width: 80px;height: 80px;" src="./images/a.jpg" alt="Apple">
+        </a>
+        <a href="images/a.jpg" title="Orange" data-gallery>
+            <img style="width: 80px;height: 80px;" src="./images/a.jpg" alt="Orange">
+        </a>
+    </div>
+
 </div>
 <footer>
     <% include ./partial/footer %>
